--- a/ProyectAudi/Views/Rol_permisos/EditarPermisos.cshtml
+++ b/ProyectAudi/Views/Rol_permisos/EditarPermisos.cshtml
@@ -43,14 +43,17 @@
                     </tbody>
                 </table>
 
-                <div class="botones-permisos">
-                    <a asp-action="SeleccionarRol" class="btn btn-secondary">
-                        <i class="bi bi-arrow-left-circle"></i> Regresar
+                <div class="botones-permisos d-flex justify-content-end align-items-center gap-2 mt-3">
+                    <a asp-action="SeleccionarRol" class="btn btn-secondary px-3 py-1 d-inline-flex align-items-center">
+                        <i class="bi bi-arrow-left-circle me-1"></i> Regresar
                     </a>
-                    <button type="submit" class="btn btn-success">
+
+                    <button type="submit" class="btn btn-success px-3 py-1">
                         <i class="bi bi-save"></i> Guardar cambios
                     </button>
                 </div>
+
+
             </form>
         </div>
     </div>
